workshop04/task2/dov-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  labels:
    name: dov-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      abc: abc
  template:
    metadata:
      name: dov-pod
      labels:
        name: dov-pod
        dept: eng
        abc: abc
      namespace: myns
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                name: dov-pod
                dept: eng
            topologyKey: doks.digitalocean.com/node-id
      containers:
        - name: dov-container
          image: stackupiss/dov-bear:v2
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
...
---
apiVersion: v1
kind: Service
metadata:
  name: dov-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 3000
  selector:
    name: dov-pod
...
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ing
  labels:
    name: dov-ing
spec:
  ingressClassName: nginx
  rules:
  - host: www.eric2022.sg
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dov-service
            port: 
              number: 8080
...
